--- a/css/index.css
+++ b/css/index.css
@@ -2,26 +2,29 @@
 @import './fonts.css';
 @import './link.css';
 @import './background-canvas.css';
+@import './heading.css';
+@import './utils.css';
 
 :root {
   background-color: var(--background-color);
   color: var(--primary-font-color);
-  height: 100%;
-  transition: 100ms;
-}
-
-::selection {
-  background: var(--primary-font-contrast-color);
+  user-select: none;
 }
 
 body {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0;
 }
+
+:root,
+body {
+  height: 100%;
+}
+
+/* Layout-specific styles */
 
 .info-section {
   display: flex;
@@ -30,29 +33,14 @@ body {
   flex-direction: column;
 }
 
-.info-section a {
+.links-list {
+  list-style: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.contact-link {
+  display: block;
   padding: 10px;
-}
-
-.info-section > *,
-.header {
-  user-select: none;
-}
-
-h1 {
-  text-shadow: 0 0 0 white;
-  transition: 300ms;
-  animation-timing-function: cubic-bezier(0.95, 0.795, 0.05, 0.035);
-}
-
-.header h1:active,
-.glitched {
-  text-shadow: 10px 10px 0 lightcoral, -10px -10px 0 lightblue, 10px -10px 0 red,
-    -10px 10px 0 red, 10px 10px 0 red;
-}
-
-@media (max-width: 500px) {
-  .info-section a {
-    padding: 15px;
-  }
 }
