--- a/src/css/heading.css
+++ b/src/css/heading.css
@@ -1,10 +1,12 @@
 h1 {
   text-shadow: 0 0 0 white;
-  transition: 300ms;
+  transition: 200ms;
   animation-timing-function: cubic-bezier(0.95, 0.795, 0.05, 0.035);
 }
 
 h1.glitched {
-  text-shadow: 10px 10px 0 lightcoral, -10px -10px 0 lightblue, 10px -10px 0 red,
-    -10px 10px 0 red, 10px 10px 0 red;
+  text-shadow: 10px 10px 0 lightcoral, -10px -10px 0 lightblue,
+    10px -10px 0 var(--complementary-color),
+    -10px 10px 0 var(--complementary-color),
+    10px 10px 0 var(--complementary-color);
 }
