improve perfomance, improve color api

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -11,10 +11,10 @@
   --primary-shade-color: darkslateblue;
   --primary-contrast-color: white;
 
-  --complementary-color: rgb(125, 30, 103);
+  --complementary-color: #7d1e67;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     --background-color: lightgrey;
 
@@ -24,4 +24,4 @@
     --primary-color: black;
     --primary-contrast-color: white;
   }
-}
+} */
