--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 @import './theme.css';
 @import './fonts.css';
 @import './link.css';
-@import './background-canvas.css';
+@import './animated-container.css';
 @import './heading.css';
 @import './utils.css';
 
