--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,9 @@
-@import url(./variables.css);
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap");
 
 html,
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 * {
@@ -14,4 +13,8 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+:root {
+  --font-color: #69585fff;
 }
