fix: make it look ok on mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,9 +21,10 @@ import Contacts from "../components/Contacts.astro";
         justify-content: center;
         align-items: center;
         height: 100vh;
-        width: min(100%, 700px);
+        width: min(100%, 800px);
         padding-bottom: 15%;
         margin: auto;
+        padding: 20px;
       }
     </style>
   </head>
