fix: update work place

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -4,10 +4,10 @@
   </h1>
   <p class="about-me__description">
     I'm currently working as a software engineer at <a
-      href="https://www.saritasa.com"
-      class="saritasa-link"
+      href="https://yandex.com/"
+      class="yandex-link"
     >
-      Saritasa
+      Yandex
     </a>
   </p>
 </section>
@@ -30,13 +30,13 @@
     line-height: 1.4;
   }
 
-  .saritasa-link {
-    color: #f15924;
+  .yandex-link {
+    color: #FC3F1D;
     text-decoration: none;
     font-weight: bold;
   }
 
-  .saritasa-link:hover {
+  .yandex-link:hover {
     box-shadow: 0 0 0 3px white;
     background-color: white;
     border-radius: 3px;
