fix: adjust yandex link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import MainHead from "../components/MainHead.astro";
     >
       <p class="text-4xl">
         Viktor Chernodub, SWE <a
-          href="https://yandex.ru"
+          href="https://yandex.com/adv/"
           class="font-bold hover:text-red-400 transition-colors">@Yandex</a
         >
       </p>
