feat: add text gradient for dark mode

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,9 @@ import MainHead from "../components/MainHead.astro";
     <div
       class="col-start-3 col-span-full row-start-2 row-span-full flex flex-col gap-4"
     >
-      <p class="text-4xl">
+      <p
+        class="dark:bg-[radial-gradient(138.06%_1036.51%_at_95.25%_-2.54%,_red_14.06%,#ff7b7b_51.02%,pink_79.09%)] dark:bg-clip-text darl:tracking-tighter dark:text-transparent text-3xl"
+      >
         Viktor Chernodub, SWE <a
           href="https://yandex.com/adv/"
           class="font-bold hover:text-red-400 transition-colors">@Yandex</a
