--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,29 +1,34 @@
 ---
-import SocialLink from "../components/SocialLink.astro";
 import MainHead from "../components/MainHead.astro";
+import SocialLink from "../components/SocialLink.astro";
 ---
 
 <html
   lang="en"
-  class="h-full w-full bg-gray-100 dark:bg-gray-800 dark:text-gray-300"
+  class="h-full w-full bg-slate-100 dark:bg-gray-800 dark:text-gray-100"
 >
   <head>
     <MainHead />
   </head>
-  <body class="h-full w-full grid grid-rows-5 grid-cols-12">
+  <body class="h-full w-full grid grid-rows-5 grid-cols-12 transition">
     <div
-      class="col-start-3 col-span-full row-start-2 row-span-full flex flex-col gap-4"
+      class="col-start-3 col-span-full row-start-2 row-span-full flex flex-col gap-5 max-md:col-start-2 max-md:row-start-3 max-md:gap-8"
     >
-      <p
-        class="dark:bg-[radial-gradient(138.06%_1036.51%_at_95.25%_-2.54%,_red_14.06%,#ff7b7b_51.02%,pink_79.09%)] dark:bg-clip-text darl:tracking-tighter dark:text-transparent text-3xl"
-      >
-        Viktor Chernodub, SWE <a
-          href="https://yandex.com/adv/"
-          class="font-bold hover:text-red-400 transition-colors">@Yandex</a
+      <div class="flex flex-col gap-3">
+        <strong class="text-6xl max-md:text-4xl">Viktor Chernodub</strong>
+        <span
+          class="block text-2xl max-md:text-xl text-gray-500 dark:text-gray-400"
         >
-      </p>
+          software engineer at <SocialLink
+            href="https://yandex.com/adv/"
+            class="font-bold hover:underline"
+          >
+            Yandex Ads
+          </SocialLink>
+        </span>
+      </div>
 
-      <ul class="flex gap-2">
+      <ul class="flex gap-4 text-2xl">
         <li>
           <SocialLink href="https://linkedin.com/in/chernodub">
             LinkedIn
